# sam-audio-plus

./: .gitignore  README.md  pyproject.toml  test_perf.py
eval/: main.py
eval/dataset/: musdb.py  sam_audio_bench.py
eval/metrics/: __init__.py  clap.py  imagebind.py  judge.py
examples/: span_prompting.executed.ipynb  span_prompting.ipynb
sam_audio/: __init__.py  logging_config.py  metrics.py  processor.py  runtime.py
sam_audio/model/: __init__.py  base.py  codec.py  config.py  model.py  text_encoder.py  transformer.py  vision_encoder.py
sam_audio/ranking/: __init__.py  clap.py  imagebind.py
scripts/: __init__.py  separate.py
