[project]
name = "sam_audio"
version = "0.1.0"
description = "Segment Anything Audio"
authors = [
    { name="Andros Tjandra", email="androstj@meta.com" },
    { name="Ann Lee", email="annl@meta.com" },
    { name="Bowen Shi", email="bshi@meta.com" },
    { name="Julius Richter", email="jrichter@meta.com" },
    { name="Matt Le", email="mattle@meta.com" },
    { name="Yi-Chiao Wu", email="yichiaowu@meta.com" },
]

readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "dacvae@git+https://github.com/facebookresearch/dacvae.git",
    "audiobox_aesthetics",
    "einops",
    "imagebind@git+https://github.com/facebookresearch/ImageBind.git",
    "laion-clap@git+https://github.com/lematt1991/CLAP.git",
    "numpy",
    "perception-models@git+https://github.com/facebookresearch/perception_models@unpin-deps",
    "pydub",
    "pyarrow>=18.0.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "nvidia-ml-py>=12.0.0",
    "torchcodec>=0.1.0",
    "torchdiffeq>=0.2.5",
    "torchvision>=0.20.0",
    "transformers>=4.47.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.26.0",
]

[project.scripts]
sam-audio = "scripts.separate:main"

[tool.setuptools.packages.find]
include = ["sam_audio*", "scripts*"]

[tool.ruff]

target-version = "py311"

lint.select=[
    "B",
    "C",
    "E",
    "W",
    "F",
    "I",
]
lint.ignore = [
    "E501",
    "E731",
    "C901",
    "B006",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/sam-audio"
Repository = "https://github.com/facebookresearch/sam-audio"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "nbclient>=0.10.3",
    "nbformat>=5.10.4",
]
